--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2024"
 
 [dependencies]
 crossterm = "0.27"
-ratatui = "0.25"
-global-hotkey = "0.6.4"
+ratatui = "0.29"
 portable-pty = "0.8.1"
 anyhow = "1.0.98"
+vt100 = "0.15.2"
+tokio = { version = "1.44.2", features = ["full"] }
+bytes = "1.10.1"
+tui-term = "0.2.0"
