--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ vt100 = "0.15.2"
 tokio = { version = "1.44.2", features = ["full"] }
 bytes = "1.10.1"
 tui-term = "0.2.0"
+#regex = "1.11.1"
+#nix = {version="0.30.1",features=["term"]}
